syntax = "proto3";

option java_package = "com.iscas.sso.mix.ticket.share.agent.model";
option java_outer_classname = "ResponseEntity";

package com.iscas.sso.mix.ticket.share.agent.model;

message ResEntity {
    uint32 status = 1;
    string message = 2;
    string desc = 3;
    string value = 4;
    string requestURL = 5;
    uint64 tookInMillis = 6;
}