syntax = "proto3";

import "resEntity.proto";
import "ticketEntity.proto";
option java_package = "com.iscas.sso.mix.ticket.share.agent.service";
option java_outer_classname = "TicketService";

//package com.iscas.sso.mix.ticket.share.agent.service;
package service;

service Ticket {
    rpc storeTicket (model.TkEntity) returns (model.ResEntity) {}
    rpc getTicket (model.TkEntity) returns (model.ResEntity) {}
}